css: shift style quick fix

--- a/src/styles/Project.css
+++ b/src/styles/Project.css
@@ -1,32 +1,3 @@
-.bookmark {
-    background: #2B7A78;
-    color: #DEF2F1;
-    font-size: 1.5em;
-    padding-left: 2%;
-    margin-left: 3%;
-    font-style: italic;
-    font-weight: bolder;
-    border-bottom: 2px solid;
-    border-top: 2px solid;
-    border-color: #FEFFFF;
-    border-radius: 10px 0 0 0;
-}
-
-.bookmark-info {
-    color: #2B7A78;
-    background: #DEF2F1;
-    font-size: 1.5em;
-    padding-left: 2%;
-    margin-left: 3%;
-    font-style: normal;
-    font-weight: bold;
-    text-align: center;
-    border-top: 2px solid;
-    border-bottom: 2px solid;
-    border-color: #FEFFFF;
-    border-radius: 10px 0 0 0;
-}
-
-.input {
+.shift-project {
     margin-left: 3%;
 }
